# localemgmt-rust

./: Cargo.toml  Dockerfile
api/: Cargo.toml
api/src/: main.rs
domain/: Cargo.toml
domain/src/: lib.rs  memory_repository.rs  model.rs  repository.rs
