[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
domain={path="../domain"}
serde = { version = "1.0.194", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
